--- a/nexApp/index.html
+++ b/nexApp/index.html
@@ -335,7 +335,7 @@
       <div class="schedule-wrapper">
       <div class="schedule clearfix">
         <div class="col-lg-2">
-          <div class="days row">
+          <div class="days assignment-1 row">
             <div>11</div>
             <div>14</div>
           </div>
@@ -349,7 +349,7 @@
       </div>
       <div class="schedule clearfix">
         <div class="col-lg-2">
-          <div class="days row">
+          <div class="days assignment-2 row">
             <div>11</div>
             <div>27</div>
           </div>
@@ -365,7 +365,7 @@
       </div>
       <div class="schedule clearfix">
         <div class="col-lg-2">
-          <div class="days row">
+          <div class="days assignment-3 row">
             <div>11</div>
             <div>29</div>
           </div>
