icon resize to 2x

--- a/nexApp/index.html
+++ b/nexApp/index.html
@@ -22,12 +22,12 @@
       <span class="career-role">Student</span>
     </div>
     <ul class="row nav-list">
-      <li class="active"><i class="fa fa-home" aria-hidden="true"></i><a href="#">Dashboard</a></li>
-      <li class=""><i class="fa fa-calendar-o" aria-hidden="true"></i><a href="#">Calendar</a></li>
-      <li class=""><i class="fa fa-exclamation-circle" aria-hidden="true"></i><a href="#">Announcement</a></li>
-      <li class=""><i class="fa fa-file-text" aria-hidden="true"></i><a href="#">Courses</a></li>
-      <li class=""><i class="fa fa-envelope" aria-hidden="true"></i><a href="#">Message</a></li>
-      <li class=""><i class="fa fa-clone" aria-hidden="true"></i><a href="#">Forum</a></li>
+      <li class="active"><i class="fa fa-2x fa-home" aria-hidden="true"></i><a href="#">Dashboard</a></li>
+      <li class=""><i class="fa fa-2x fa-calendar-o" aria-hidden="true"></i><a href="#">Calendar</a></li>
+      <li class=""><i class="fa fa-2x fa-exclamation-circle" aria-hidden="true"></i><a href="#">Announcement</a></li>
+      <li class=""><i class="fa fa-2x fa-file-text" aria-hidden="true"></i><a href="#">Courses</a></li>
+      <li class=""><i class="fa fa-2x fa-envelope" aria-hidden="true"></i><a href="#">Message</a></li>
+      <li class=""><i class="fa fa-2x fa-clone" aria-hidden="true"></i><a href="#">Forum</a></li>
     </ul>
     <ul class="nav-footer col-lg-12">
       <li class="col-lg-6"><a href="#" aria-label="settings"><i class="fa fa-cog fa-2x" aria-hidden="true"></i></a></li>
